crates/oct-llm-provider/tests/moonshot/snapshots/r#mod__moonshot__fixtures__snapshot_parse_simple_text_stream.snap
---
source: tests/moonshot/fixtures.rs
expression: events
---
- ReasoningDelta: The
- ReasoningDelta: " user"
- ReasoningDelta: " is"
- ReasoningDelta: " asking"
- ReasoningDelta: " me"
- ReasoningDelta: " to"
- ReasoningDelta: " say"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\""
- ReasoningDelta: " in"
- ReasoningDelta: " one"
- ReasoningDelta: " word"
- ReasoningDelta: "."
- ReasoningDelta: " This"
- ReasoningDelta: " is"
- ReasoningDelta: " a"
- ReasoningDelta: " very"
- ReasoningDelta: " simple"
- ReasoningDelta: " request"
- ReasoningDelta: "."
- ReasoningDelta: " The"
- ReasoningDelta: " word"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\""
- ReasoningDelta: " itself"
- ReasoningDelta: " is"
- ReasoningDelta: " one"
- ReasoningDelta: " word"
- ReasoningDelta: ","
- ReasoningDelta: " so"
- ReasoningDelta: " I"
- ReasoningDelta: " can"
- ReasoningDelta: " just"
- ReasoningDelta: " say"
- ReasoningDelta: " \""
- ReasoningDelta: Hello
- ReasoningDelta: "\""
- ReasoningDelta: " or"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\"."
- ReasoningDelta: " \n\n"
- ReasoningDelta: The
- ReasoningDelta: " user"
- ReasoningDelta: " wants"
- ReasoningDelta: " a"
- ReasoningDelta: " one"
- ReasoningDelta: "-word"
- ReasoningDelta: " response"
- ReasoningDelta: "."
- ReasoningDelta: " The"
- ReasoningDelta: " word"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\""
- ReasoningDelta: " fits"
- ReasoningDelta: " perfectly"
- ReasoningDelta: "."
- ReasoningDelta: " I"
- ReasoningDelta: " should"
- ReasoningDelta: " provide"
- ReasoningDelta: " just"
- ReasoningDelta: " that"
- ReasoningDelta: " word"
- ReasoningDelta: " without"
- ReasoningDelta: " any"
- ReasoningDelta: " additional"
- ReasoningDelta: " text"
- ReasoningDelta: " to"
- ReasoningDelta: " strictly"
- ReasoningDelta: " follow"
- ReasoningDelta: " the"
- ReasoningDelta: " instruction"
- ReasoningDelta: ".\n\n"
- ReasoningDelta: Possible
- ReasoningDelta: " responses"
- ReasoningDelta: ":\n"
- ReasoningDelta: "1"
- ReasoningDelta: "."
- ReasoningDelta: " \""
- ReasoningDelta: Hello
- ReasoningDelta: "\"\n"
- ReasoningDelta: "2"
- ReasoningDelta: "."
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\"\n"
- ReasoningDelta: "3"
- ReasoningDelta: "."
- ReasoningDelta: " \""
- ReasoningDelta: Hi
- ReasoningDelta: "\""
- ReasoningDelta: " ("
- ReasoningDelta: also
- ReasoningDelta: " means"
- ReasoningDelta: " hello"
- ReasoningDelta: ","
- ReasoningDelta: " but"
- ReasoningDelta: " the"
- ReasoningDelta: " user"
- ReasoningDelta: " specifically"
- ReasoningDelta: " asked"
- ReasoningDelta: " to"
- ReasoningDelta: " say"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\")\n"
- ReasoningDelta: "4"
- ReasoningDelta: "."
- ReasoningDelta: " \""
- ReasoningDelta: G
- ReasoningDelta: reetings
- ReasoningDelta: "\""
- ReasoningDelta: " ("
- ReasoningDelta: long
- ReasoningDelta: er
- ReasoningDelta: " than"
- ReasoningDelta: " necessary"
- ReasoningDelta: ")\n\n"
- ReasoningDelta: The
- ReasoningDelta: " most"
- ReasoningDelta: " straightforward"
- ReasoningDelta: " answer"
- ReasoningDelta: " is"
- ReasoningDelta: " simply"
- ReasoningDelta: ":"
- ReasoningDelta: " Hello"
- ReasoningDelta: "\n\n"
- ReasoningDelta: Or
- ReasoningDelta: " lowercase"
- ReasoningDelta: ":"
- ReasoningDelta: " hello"
- ReasoningDelta: "\n\n"
- ReasoningDelta: Since
- ReasoningDelta: " the"
- ReasoningDelta: " user"
- ReasoningDelta: " wrote"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\""
- ReasoningDelta: " in"
- ReasoningDelta: " lowercase"
- ReasoningDelta: " in"
- ReasoningDelta: " their"
- ReasoningDelta: " prompt"
- ReasoningDelta: ","
- ReasoningDelta: " but"
- ReasoningDelta: " it's"
- ReasoningDelta: " the"
- ReasoningDelta: " beginning"
- ReasoningDelta: " of"
- ReasoningDelta: " a"
- ReasoningDelta: " response"
- ReasoningDelta: ","
- ReasoningDelta: " either"
- ReasoningDelta: " works"
- ReasoningDelta: "."
- ReasoningDelta: " I'll"
- ReasoningDelta: " go"
- ReasoningDelta: " with"
- ReasoningDelta: " \""
- ReasoningDelta: Hello
- ReasoningDelta: "\""
- ReasoningDelta: " as"
- ReasoningDelta: " it's"
- ReasoningDelta: " more"
- ReasoningDelta: " standard"
- ReasoningDelta: " for"
- ReasoningDelta: " a"
- ReasoningDelta: " standalone"
- ReasoningDelta: " greeting"
- ReasoningDelta: ","
- ReasoningDelta: " or"
- ReasoningDelta: " just"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\""
- ReasoningDelta: " to"
- ReasoningDelta: " match"
- ReasoningDelta: " exactly"
- ReasoningDelta: " what"
- ReasoningDelta: " they"
- ReasoningDelta: " asked"
- ReasoningDelta: " for"
- ReasoningDelta: "."
- ReasoningDelta: " Actually"
- ReasoningDelta: ","
- ReasoningDelta: " looking"
- ReasoningDelta: " at"
- ReasoningDelta: " the"
- ReasoningDelta: " request"
- ReasoningDelta: " again"
- ReasoningDelta: ","
- ReasoningDelta: " they"
- ReasoningDelta: " said"
- ReasoningDelta: " \""
- ReasoningDelta: Say
- ReasoningDelta: " '"
- ReasoningDelta: hello
- ReasoningDelta: "'"
- ReasoningDelta: " in"
- ReasoningDelta: " one"
- ReasoningDelta: " word"
- ReasoningDelta: "\""
- ReasoningDelta: " -"
- ReasoningDelta: " so"
- ReasoningDelta: " the"
- ReasoningDelta: " content"
- ReasoningDelta: " should"
- ReasoningDelta: " be"
- ReasoningDelta: " the"
- ReasoningDelta: " word"
- ReasoningDelta: " \""
- ReasoningDelta: hello
- ReasoningDelta: "\".\n\n"
- ReasoningDelta: "I'll"
- ReasoningDelta: " provide"
- ReasoningDelta: ":"
- ReasoningDelta: " Hello"
- TextDelta: Hello
- Finish: Stop
