crates/oct-llm-provider/tests/moonshot/snapshots/r#mod__moonshot__fixtures__snapshot_parse_tool_call_stream_request.snap
---
source: tests/moonshot/fixtures.rs
expression: messages
---
- role: User
  parts:
    - Text: What is the weather in Shenzhen?
